load("@aspect_rules_js//js:defs.bzl", "js_library")

filegroup(
    name = "shaders",
    srcs = glob([
        "shaders/*.glsl",
        "shaders/*.wgsl",
    ]),
    visibility = ["//visibility:public"],
)

js_library(
    name = "renderers_js",
    srcs = [
        "histogram.js",
        "ml-inference.js",
        "utils.js",
        "webgl-renderer.js",
        "webgpu-renderer.js",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "renderers",
    srcs = [
        "webgl-renderer.js",
        "webgpu-renderer.js",
        "ml-inference.js",
        "utils.js",
        "histogram.js",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "cybervision-core",
    srcs = [
        ":shaders",
        ":renderers",
    ],
    visibility = ["//visibility:public"],
)

exports_files([
    "histogram.js",
    "ml-inference.js",
    "utils.js",
    "webgl-renderer.js",
    "webgpu-renderer.js",
])
