load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")

# Utilities library
py_library(
    name = "utils",
    srcs = glob(["utils/*.py"]),
    deps = [
        "//ai/llm/tokenizer",
        "@pip//huggingface_hub",
        "@pip//numpy",
        "@pip//protobuf",
        "@pip//safetensors",
        "@pip//sentencepiece",
        "@pip//tiktoken",
        "@pip//tinygrad",
        "@pip//transformers",  # For OPT and LLaMA tokenizers
    ],
    visibility = ["//ai/llm/tinyllm:__subpackages__"],
)

# Building block operations
py_library(
    name = "ops",
    srcs = glob(["ops/*.py"]),
    deps = [
        "@pip//tinygrad",
    ],
    visibility = ["//ai/llm/tinyllm:__subpackages__"],
)

# Model implementations
py_library(
    name = "models",
    srcs = glob(["models/*.py"]),
    deps = [
        ":ops",
        ":utils",
        "@pip//numpy",
        "@pip//tinygrad",
    ],
    visibility = ["//ai/llm/tinyllm:__subpackages__"],
)

# Main tinyllm library (public API)
py_library(
    name = "tinyllm",
    srcs = ["__init__.py", "kv_cache.py"],
    deps = [
        ":models",
        ":utils",
        "@pip//tinygrad",
    ],
    visibility = ["//visibility:public"],
)

# Weight loader test
py_test(
    name = "test_weight_loader",
    srcs = ["test_weight_loader.py"],
    deps = [":tinyllm"],
    size = "large",  # May download weights
    timeout = "long",  # Allow time for download
)

# GPT-2 model test
py_test(
    name = "test_gpt2",
    srcs = ["test_gpt2.py"],
    deps = [":tinyllm"],
    size = "large",  # May download weights
    timeout = "long",  # Allow time for download
)

# OPT model test
py_test(
    name = "test_opt",
    srcs = ["test_opt.py"],
    deps = [":tinyllm"],
    size = "large",  # May download weights
    timeout = "long",  # Allow time for download
)

# LLaMA model test
# tagged "manual" because it downloads large weights (~6GB) and exceeds CI time limits
# run locally with: bazel test //ai/llm/tinyllm:test_llama
py_test(
    name = "test_llama",
    srcs = ["test_llama.py"],
    deps = [":tinyllm"],
    size = "large",
    timeout = "long",
    tags = ["manual"],
)

# Interactive CLI
py_binary(
    name = "cli",
    srcs = ["cli.py"],
    main = "cli.py",
    deps = [
        ":tinyllm",
        "@pip//click",
        "@pip//tinygrad",
    ],
)

# KV cache test
py_test(
    name = "test_kvcache_gpt2",
    srcs = ["test_kvcache_gpt2.py"],
    deps = [":tinyllm"],
    size = "large",
    timeout = "long",
    tags = ["manual"],
)

py_test(
    name = "test_kv_cache2",
    srcs = ["test_kv_cache2.py"],
    deps = [":tinyllm"],
    size = "large",
    timeout = "long",
    tags = ["manual"],
)

py_test(
    name = "test_kv_cache3",
    srcs = ["test_kv_cache3.py"],
    deps = [":tinyllm"],
    size = "large",
    timeout = "long",
    tags = ["manual"],
)

py_test(
    name = "test_kv_cache_prefix",
    srcs = ["test_kv_cache_prefix.py"],
    deps = [":tinyllm"],
    size = "large",
    timeout = "long",
    tags = ["manual"],
)
